--- a/requirements.txt
+++ b/requirements.txt
@@ -1,104 +1,143 @@
 aiohappyeyeballs==2.6.1
-aiohttp==3.12.15
-aiosignal==1.4.0
+aiohttp==3.12.12
+aiosignal==1.3.2
 annotated-types==0.7.0
-anyio==4.10.0
+anyio==4.9.0
+astor==0.8.1
+asttokens==3.0.0
 attrs==25.3.0
 beautifulsoup4==4.13.4
-cachetools==6.1.0
-certifi==2025.8.3
+cachetools==6.0.0
+certifi==2025.4.26
 chardet==5.2.0
 charset-normalizer==3.4.2
 colorama==0.4.6
 colorlog==6.9.0
+comm==0.2.2
+contourpy==1.3.2
 cssselect==1.3.0
 cssutils==2.11.1
+cycler==0.12.1
 dataclasses-json==0.6.7
+debugpy==1.8.14
 decorator==5.2.1
 distro==1.9.0
 einops==0.8.1
 et-xmlfile==2.0.0
+executing==2.2.0
 filelock==3.18.0
+fonttools==4.58.4
 frozenlist==1.7.0
-fsspec==2025.7.0
+fsspec==2025.5.1
 ftfy==6.3.1
 gputil==1.4.0
-greenlet==3.2.4
+greenlet==3.2.3
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
-httpx-sse==0.4.1
-huggingface-hub==0.34.4
+huggingface-hub==0.32.4
 idna==3.10
 imagesize==1.4.1
+img2table==1.4.1
+ipykernel==6.29.5
+ipython==9.3.0
+ipython-pygments-lexers==1.1.1
+jedi==0.19.2
 jinja2==3.1.6
 jiter==0.10.0
 joblib==1.5.1
 jsonpatch==1.33
 jsonpointer==3.0.0
-langchain==0.3.27
-langchain-community==0.3.27
-langchain-core==0.3.74
-langchain-openai==0.3.29
-langchain-text-splitters==0.3.9
-langsmith==0.4.13
-lxml==6.0.0
+jupyter-client==8.6.3
+jupyter-core==5.8.1
+kiwisolver==1.4.8
+langchain==0.2.17
+langchain-community==0.2.17
+langchain-core==0.2.43
+langchain-openai==0.1.25
+langchain-text-splitters==0.2.4
+langsmith==0.1.147
+llvmlite==0.44.0
+lxml==5.4.0
 markupsafe==3.0.2
 marshmallow==3.26.1
+matplotlib==3.10.3
+matplotlib-inline==0.1.7
 more-itertools==10.7.0
-multidict==6.6.3
+mpmath==1.3.0
+multidict==6.4.4
 mypy-extensions==1.1.0
+nest-asyncio==1.6.0
 networkx==3.5
-numpy==2.3.2
-openai==1.99.5
+numba==0.61.2
+numpy==1.26.4
+openai==1.63.2
 opencv-contrib-python==4.10.0.84
 openpyxl==3.1.5
 opt-einsum==3.3.0
-orjson==3.11.1
-packaging==25.0
-paddleocr==3.1.0
-paddlepaddle==3.1.0
-paddlex==3.1.3
-pandas==2.3.1
-pillow==11.3.0
+orjson==3.10.18
+packaging==24.2
+paddleocr==3.0.1
+paddlepaddle==3.0.0
+paddlex==3.0.1
+pandas==1.5.3
+parso==0.8.4
+pillow==11.2.1
 pip==25.0.1
+platformdirs==4.3.8
+polars==1.30.0
 premailer==3.10.0
 prettytable==3.16.0
+prompt-toolkit==3.0.51
 propcache==0.3.2
 protobuf==6.31.1
+psutil==7.0.0
+pure-eval==0.2.3
 py-cpuinfo==9.0.0
+pyarrow==20.0.0
 pyclipper==1.3.0.post6
-pydantic==2.11.7
+pydantic==2.11.5
 pydantic-core==2.33.2
-pydantic-settings==2.10.1
+pygments==2.19.1
+pymupdf==1.26.0
+pyparsing==3.2.3
 pypdfium2==4.30.0
 python-dateutil==2.9.0.post0
-python-dotenv==1.1.1
 pytz==2025.2
+pywin32==310
 pyyaml==6.0.2
-regex==2025.7.34
+pyzmq==26.4.0
+regex==2024.11.6
 requests==2.32.4
 requests-toolbelt==1.0.0
 ruamel-yaml==0.18.14
 ruamel-yaml-clib==0.2.12
-scikit-learn==1.7.1
-scipy==1.16.1
+safetensors==0.5.3
+scikit-learn==1.7.0
+scipy==1.15.3
+setuptools==80.9.0
 shapely==2.1.1
 six==1.17.0
 sniffio==1.3.1
 soupsieve==2.7
 sqlalchemy==2.0.42
-tenacity==9.1.2
+stack-data==0.6.3
+sympy==1.14.0
+tenacity==8.5.0
 threadpoolctl==3.6.0
-tiktoken==0.11.0
-tokenizers==0.21.4
+tiktoken==0.9.0
+tokenizers==0.19.1
+torch==2.7.1
+torchaudio==2.7.1
+torchvision==0.22.1
+tornado==6.5.1
 tqdm==4.67.1
-typing-extensions==4.14.1
+traitlets==5.14.3
+typing-extensions==4.14.0
 typing-inspect==0.9.0
 typing-inspection==0.4.1
-tzdata==2025.2
 ujson==5.10.0
-urllib3==2.5.0
+urllib3==2.4.0
 wcwidth==0.2.13
+xlsxwriter==3.2.3
 yarl==1.20.1
-zstandard==0.23.0
